--- a/theme_1.html
+++ b/theme_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/06071e1720.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="chapter9_exercise2.css" />
+    <link rel="stylesheet" href="theme_1.css" />
     <title>C9E2</title>
   </head>
 
