--- a/theme_1.html
+++ b/theme_1.html
@@ -11,24 +11,33 @@
   <body>
     <header></header>
     <main>
-      <div class="box">
-        <div class="box1-img"></div>
-        <span class="box-step">step1</span>
-        <h3 class="box-title">タイトルが入ります</h3>
-        <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+      <div class="step-box">
+        <div class="step-img1"></div>
+        <span class="step-num">step1</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
       </div>
-      <div class="box">
-        <div class="box2-img"></div>
-        <span class="box-step">step2</span>
-        <h3 class="box-title">タイトルが入ります</h3>
-        <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+
+      <div class="step-box">
+        <div class="step-img2"></div>
+        <span class="step-num">step2</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
       </div>
-      <div class="box">
-        <div class="box3-img"></div>
-        <span class="box-step">step3</span>
-        <h3 class="box-title">タイトルが入ります</h3>
-        <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+
+      <div class="step-box">
+        <div class="step-img3"></div>
+        <span class="step-num">step3</span>
+        <h3 class="title">タイトルが入ります</h3>
+        <p class="text">
+          文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+        </p>
       </div>
     </main>
     <footer></footer>
   </body>
+</html>
