[Fix]main and step-img

--- a/theme_1.html
+++ b/theme_1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/06071e1720.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="theme_1.css" />
-    <title>C9E2</title>
+    <title>Theme_1</title>
   </head>
 
   <body>
